<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:orderInCategory="101"
            android:title="@string/home_text" />
        <item
            android:id="@+id/doctorsFragment"
            android:icon="@drawable/ic_supervisor_account"
            android:orderInCategory="102"
            android:title="@string/doctors_text" />
        <item
            android:id="@+id/diseasesFragment"
            android:icon="@drawable/ic_warning"
            android:orderInCategory="103"
            android:title="@string/diseases_text" />
        <item
            android:id="@+id/messagesFragment"
            android:icon="@drawable/ic_chat_bubble"
            android:orderInCategory="104"
            android:title="@string/messages_text" />
    </group>

    <item
        android:orderInCategory="106"
        android:title="@string/accounts_text">
        <menu>
            <item
                android:id="@+id/profileFragment"
                android:icon="@drawable/ic_account_circle_black_48dp"
                android:title="@string/profile_text" />
        </menu>
    </item>
</menu>