<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/name_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Covid19" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_tv"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:text="@string/description_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="A very fatal flue, global pandemic, terrible" />

    <LinearLayout
        android:id="@+id/statistics_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_tv"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/symptoms_count_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sample_symptoms_count"
            tools:text="20 symptoms" />

        <TextView
            android:id="@+id/measures_count_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sample_measures_count"
            tools:text="30 Measures" />
    </LinearLayout>

</RelativeLayout>