<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/more_image_btn"
        android:padding="4dp"
        android:text="@string/name_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_tv"
        android:layout_toStartOf="@id/more_image_btn"
        android:padding="4dp"
        android:text="@string/description_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <ImageButton
        android:id="@+id/more_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vertical_more_text"
        android:src="@drawable/ic_more_vert_black_24dp" />

</RelativeLayout>