<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar_civ"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/user_avatar_text"
        android:src="@drawable/ic_account_circle_black_48dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/user_avatar_civ"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/user_avatar_civ"
        app:layout_constraintStart_toEndOf="@id/user_avatar_civ"
        app:layout_constraintTop_toTopOf="@id/user_avatar_civ">

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:text="@string/name_hint"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/user_role_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/role_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>